fix(webkit): set flex layout to column to prevent imgs from being stretched (#217)

--- a/src/css/customers/card.module.css
+++ b/src/css/customers/card.module.css
@@ -36,6 +36,7 @@
 .card__illustration {
   display: flex;
   flex: 1;
+  flex-direction: column;
 }
 
 @media (max-width: 996px) {
